# freestyle-sculpt

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: cd.yml  ci.yml
.zed/: settings.json
examples/: meshgraph.rs
examples/bevy-basic-sculpt/: Cargo.toml
examples/bevy-basic-sculpt/src/: main.rs  resources.rs
examples/bevy-basic-sculpt/src/systems/: setup.rs  update.rs
src/: lib.rs  ray.rs  utils.rs
src/deformation/: mod.rs  smooth.rs  traits.rs  translate.rs
src/integrations/: bevy.rs  mod.rs
src/meshgraph/: elements.rs  mod.rs  primitives.rs  selection.rs
src/meshgraph/elements/: face.rs  halfedge.rs  halfedge_loop.rs  mod.rs  vertex.rs
src/meshgraph/ops/: cleanup.rs  collapse.rs  delete.rs  insert.rs  mod.rs  query.rs  subdivide.rs
src/selectors/: distance.rs  metric_with_falloff.rs  mod.rs  sphere_with_falloff.rs  surface_metric_with_falloff.rs  surface_sphere_with_falloff.rs  traits.rs
