[package]
name = "freestyle-sculpt"
version = "0.3.0"
edition = "2024"
authors = ["Marc-Stefan Cassola"]
categories = ["graphics", "algorithms", "mathematics"]
description = "Dyntopo real-time 3D sculpting in Rust"
exclude = ["examples/", "tests/"]
keywords = ["3D", "sculpting", "real-time", "mesh", "topology"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Synphonyte/freestyle-sculpt"


[dependencies]
anyhow = "1"
bevy = { version = "0.16.0", optional = true }
cfg-if = { version = "1.0.0", optional = true }
derive_more = { version = "2", features = ["deref", "deref_mut"] }
glam = "0.29"
hashbrown = "0.15.2"
itertools = "0.14"
lazy_static = { version = "1.5.0", optional = true }
parry3d = { version = "0.21.0" }
mesh-graph = { version = "0.2" }
rerun = { version = "0.23", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
slotmap = "1"

[features]
default = []
bevy = ["dep:bevy", "mesh-graph/bevy"]
rerun = ["dep:rerun", "dep:lazy_static", "dep:cfg-if", "mesh-graph/rerun"]
serde = ["dep:serde", "mesh-graph/serde", "glam/serde"]
