[package]
name = "freestyle-sculpt"
version = "0.4.1"
edition = "2024"
description = "Dyntopo real-time 3D sculpting in Rust"
readme = "README.md"
repository = "https://github.com/Synphonyte/freestyle-sculpt"
license = "MIT"
keywords = ["3D", "mesh", "real-time", "sculpting", "topology"]
categories = ["algorithms", "graphics", "mathematics"]
exclude = ["examples/", "tests/"]

[dependencies]
anyhow = "1"
bevy = { version = "0.17.2", optional = true }
cfg-if = { version = "1", optional = true }
derive_more = { version = "2", features = ["deref", "deref_mut"] }
glam = "0.30"
hashbrown = "0.16"
itertools = "0.14"
lazy_static = { version = "1.5.0", optional = true }
mesh-graph = { version = "0.3.1" }
parry3d = "0.25"
rerun = { version = "0.25", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
slotmap = "1"
tracing = "0.1"

[features]
default = []
bevy = ["dep:bevy", "mesh-graph/bevy"]
rerun = ["dep:cfg-if", "dep:lazy_static", "dep:rerun", "mesh-graph/rerun"]
serde = ["dep:serde", "glam/serde", "mesh-graph/serde"]
